add better property of input

--- a/style-first.css
+++ b/style-first.css
@@ -65,12 +65,6 @@ h2 {
   pointer-events: none;
   color: var(--color-whit);
 }
-/* 
-.input-box input:focus ~ .label-pass,
-.input-box input:valid ~ .label-pass {
-  top: 5px;
-  color: yellow;
-} */
 .input-box input {
   width: 100%;
   height: 50px;
@@ -92,7 +86,8 @@ h2 {
     position: absolute;
     width: 400px;
     height: 400px;
-    background: linear-gradient(180deg,var(--color-3) 31.77%,var(--color-whit) 100%);
+       background: linear-gradient(.25turn,#07886F, 20%, #29344D);
+
     transform: translate(-100px,-50px);
     transition: 1s cubic-bezier(.05,.8,.16,1);
     border-radius: 30% 70% 70% 30% / 34% 30% 70% 66% ;
@@ -119,7 +114,8 @@ a:hover{
     color: var(--color-whit);
 }
 .remember-forget label input[type=checkbox]{
-    accent-color: rgb(188, 88, 105);
+    accent-color: #01C29D;
+    
    
 }
 button{
