--- a/style-first.css
+++ b/style-first.css
@@ -115,7 +115,7 @@ a:hover {
   text-decoration: underline;
   color: var(--color-whit);
 }
-.remember-forget label input[type="checkbox"] {
+.remember-forget input#remember{
   accent-color: #01c29d;
 }
 button {
@@ -147,4 +147,7 @@ button:hover {
   100% {
     transform: translate(-300px, -350px) rotate(-150deg);
   }
+}
+.hide{
+  display: none;
 }
